--- a/boolpress_frontoffice/package.json
+++ b/boolpress_frontoffice/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
+    "sass": "^1.66.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
